@@ -80,7 +80,8 @@ Spanner::do_break_processing ()
     }
   else
     {
-      Link_array<Item> break_points = pscore_->root_system ()->broken_col_range (left, right);
+      System *root  = get_root_system (this);
+      Link_array<Item> break_points = root->broken_col_range (left, right);
 
       break_points.insert (left, 0);
       break_points.push (right);
