@@ -1,5 +1,9 @@
 2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/main.cc (LY_DEFINE): add gmane address.
+
+	* lily/beam.cc: remove calc_positions()
+
 	* lily/include/grob.hh (class Grob): move pscore, dim_cache_,
 	original_ in private scope.
 	(class Grob): drop pscore_ pointer, change to output_def pointer.
